# questbotv2

./: .gitignore  devenv.nix  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
questbot/: Dockerfile  keyboards.py  main.py  messages.py  router.py  scheduler.py  states.py  utils.py
questbot/services/: base.py  employee.py  project.py  quest.py
questbot/src/: keyboards.py  main.py  router.py  utils.py
questbot_api/: Dockerfile  package-lock.json  package.json  tsconfig.json
questbot_api/src/: config.js  config.ts  db.js  db.ts  main.js  main.ts  middlewares.js  middlewares.ts
questbot_api/src/entities/: Chat.ts  Division.ts  Employee.ts  Project.ts  Quest.ts  Question.ts  QuestionOption.ts  Role.ts  User.ts  user.js
questbot_api/src/routes/: auth.ts  chat.ts  division.ts  employee.ts  project.ts  quest.ts  question.ts  role.ts  user.js  user.ts
questbot_ui/: Dockerfile  README.md  package.json  tsconfig.app.json
questbot_ui/src/: App.vue  config.ts  main.ts
questbot_ui/src/components/: Appbar.vue  CustomTable.vue  FindOrAddPopup.vue  FormField.vue  FormPopup.vue  Sidebar.vue  TableCell.vue
questbot_ui/src/router/: index.ts
questbot_ui/src/views/: AuthView.vue  HomeView.vue
